# doorbot_1.3

./: .gitignore  LICENSE  README.md  SLACK_TESTING.md  app.py  blinkstick_interface.py  config.json.template  config_manager.py  dev-requirements.in  dev-requirements.txt  doorbot.service  doorbot_hat_gpio.py  doorbot_hat_interface.py  enclave_config.py  keys_example.json  keys_example_out.json  main.py  nfc_converter_test2.py  pyproject.toml  requirements.txt  rfid_converter_tests.py  rfid_test.py  setup_venv.sh  slack_blocks.py  slack_test.py  slack_test3.py  slack_test5.py  slack_testing_app.py  sonar-project.properties  speaker_server.service  tag_reader_interface.py  test1.py  test_doorbot_hat_interface.py  test_enclave_config.py  test_gpio.py  test_gpio2.py  test_tag_reader_interface.py  test_updating_config_loader.py  updating_config_loader.py  user_cache.json.example  (+6 more)
config/: enclave_auth-example.json  enclave_keys-test.json  main_config.json  tag_reader_config.json
doorbot/: app-old.py  app.py  background_tasks.py  slack_handlers.py  speaker_server.py  test_slack_handlers.py  utils.py
experiments/: config_dummy.json  example_music.py  example_tts.py  key_parity_check.py  nfc_converter_tests.py  pigpio_output_test.py  rfid_converter_tests.py  slack_home_blockkit.json  slack_test4.py  slack_test6.py  slack_test7.py  slack_test_2.py  test_doorbot_hat_gpio.py  test_doorbot_hat_interface.py  test_rpi_gpio.py  text_to_speech_test.py  tts_threaded.py  weigand_script.py  weigand_script2.py
src/: app.py  speaker_server.py
tests/: hello_world_test.py  (+1 more)
(+55 files in other folders)
